Working External Lights plugin

--- a/src/plugins/externallights/public/webcomponents/external-brightness-indicator.html
+++ b/src/plugins/externallights/public/webcomponents/external-brightness-indicator.html
@@ -2,16 +2,16 @@
 <polymer-element name="external-brightness-indicator" attributes="">
   <template>
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../css/lights.css">
 
 
     <style>
     </style>
 
-    <div id="internal_lights_indicator" class="{{internalclass}}" ></div>
-    <div id="external_lights_indicator" class="{{externalclass}}" ></div>
+    <div id="internal_lights_indicator" class="level{{internalclass}}" ></div>
+    <div id="external_lights_indicator" class="level{{externalclass}}" ></div>
     
 
   </template>
@@ -21,12 +21,11 @@
         internal_brightnessLevel: '0',
         external_brightnessLevel: '0',
         computed: {
-          internalclass: 'Math.ceil(internal_brightnessLevel*10)',
-          externalclass: 'Math.ceil(external_brightnessLevel*10)'
+          internalclass: 'internal_brightnessLevel',
+          externalclass: 'external_brightnessLevel'
         }
-        }
-      })
-    })();
+        });
+      })();
   </script>
 
 </polymer-element>
