--- a/src/plugins/motor_diags/public/diagpanel.html
+++ b/src/plugins/motor_diags/public/diagpanel.html
@@ -9,7 +9,7 @@
       <label class="control-label" for="portMotorSpeed">Port Motor</label>
       <input type="text" data-bind="value: portMotorSpeed" />
       <div class="controls">
-         <paper-slider min="-1" max="1" step="0.001" value="0" id="portMotorSpeed"></paper-slider>
+         <!--paper-slider min="-1" max="1" step="0.001" value="0" id="portMotorSpeed"></paper-slider-->
          <!--<div id="portMotorSpeed"></div>-->
       </div>
       <div  class="text-center">
@@ -27,7 +27,7 @@
       <label class="control-label" for="verticalMotorSpeedVal">Vertical Motor</label>
       <input type="text"  data-bind="value: verticalMotorSpeed" />
       <div class="controls">
-         <paper-slider min="-1" max="1" step="0.001" value="0" id="verticalMotorSpeed"></paper-slider>
+         <!--paper-slider min="-1" max="1" step="0.001" value="0" id="verticalMotorSpeed"></paper-slider-->
          <!--<div id="verticalMotorSpeed"></div>-->
       </div>
       <div  class="text-center">
@@ -45,7 +45,7 @@
       <label class="control-label" for="starbordMotorSpeed">Starboard Motor</label>
       <input type="text"  data-bind="value: starbordMotorSpeed" />
       <div class="controls">
-         <paper-slider min="-1" max="1" step="0.001" value="0" id="starbordMotorSpeed"></paper-slider>
+         <!--paper-slider min="-1" max="1" step="0.001" value="0" id="starbordMotorSpeed"></paper-slider-->
          <!--<div id="starbordMotorSpeed"></div>-->
       </div>
       <div  class="text-center">
