--- a/src/static/webcomponents/menu/menu.html
+++ b/src/static/webcomponents/menu/menu.html
@@ -27,6 +27,9 @@
         domReady: function () {
 //          var self = this;
 //          $(this.$.settings).find('.back-button').click(self.hideSettings);
+        },
+        menuitems: function() {
+          return $('#menuitems')[0]; 
         }
       })
     })();
