--- a/src/ui-plugins/standard/public/standard-ui.html
+++ b/src/ui-plugins/standard/public/standard-ui.html
@@ -109,6 +109,9 @@
       },
       setSettingsPanel: function(element) {
         element.appendTo($(this.$.newuiBody));
+      },
+      getNavBar: function() {
+        return($(this.$.navtoolbar))
       }
     })
   </script>
