--- a/src/plugins/motor_diags/public/diagpanel.html
+++ b/src/plugins/motor_diags/public/diagpanel.html
@@ -9,8 +9,8 @@
       <label class="control-label" for="portMotorSpeed">Port Motor</label>
       <input type="text" data-bind="value: portMotorSpeed" />
       <div class="controls">
-         <!--paper-slider min="-1" max="1" step="0.001" value="0" id="portMotorSpeed"></paper-slider-->
-         <!--<div id="portMotorSpeed"></div>-->
+         <paper-slider min="-1" max="1" step="0.001" value="0" id="portMotorSpeed"></paper-slider>
+         <div id="portMotorSpeed"></div>
       </div>
       <div  class="text-center">
          <div  data-bind="foreach: diagnosticMotorSpeedButtons">
