Fixing motor-diag sliders. This was probably related to the video-container element being renamed. Fixes OpenROV/openrov-software#437

--- a/src/plugins/motor_diags/public/diagpanel.html
+++ b/src/plugins/motor_diags/public/diagpanel.html
@@ -27,8 +27,8 @@
       <label class="control-label" for="verticalMotorSpeedVal">Vertical Motor</label>
       <input type="text"  data-bind="value: verticalMotorSpeed" />
       <div class="controls">
-         <!--paper-slider min="-1" max="1" step="0.001" value="0" id="verticalMotorSpeed"></paper-slider-->
-         <!--<div id="verticalMotorSpeed"></div>-->
+         <paper-slider min="-1" max="1" step="0.001" value="0" id="verticalMotorSpeed"></paper-slider>
+         <div id="verticalMotorSpeed"></div>
       </div>
       <div  class="text-center">
          <div  data-bind="foreach: diagnosticMotorSpeedButtons">
@@ -45,8 +45,8 @@
       <label class="control-label" for="starbordMotorSpeed">Starboard Motor</label>
       <input type="text"  data-bind="value: starbordMotorSpeed" />
       <div class="controls">
-         <!--paper-slider min="-1" max="1" step="0.001" value="0" id="starbordMotorSpeed"></paper-slider-->
-         <!--<div id="starbordMotorSpeed"></div>-->
+         <paper-slider min="-1" max="1" step="0.001" value="0" id="starbordMotorSpeed"></paper-slider>
+         <div id="starbordMotorSpeed"></div>
       </div>
       <div  class="text-center">
          <div  data-bind="foreach: diagnosticMotorSpeedButtons">
