--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -120,7 +120,7 @@
           {
             name: "newUi.showTelemetry",
             description: "Show the telemetry window.",
-            defaults: { keyboard: 'alt+t' },
+            defaults: { keyboard: '.' },
             down: function() {
               var telemetryWindow =
                 window.open('/new-ui/telemetry',
