--- a/src/plugins/settings-manager/public/webcomponents/orov-settings-manager.html
+++ b/src/plugins/settings-manager/public/webcomponents/orov-settings-manager.html
@@ -1,6 +1,6 @@
 <link rel="import" href="../polymer/polymer.html">
 <dom-module name="orov-settings-manager">
-<script src="json-editor/dist/jsoneditor.min.js"></script>
+<script src="../json-editor/dist/jsoneditor.min.js"></script>
 <template>
   <div id='form1'>
   </div>
