--- a/src/plugins/telemetry/public/webcomponents/telemetry-graph.html
+++ b/src/plugins/telemetry/public/webcomponents/telemetry-graph.html
@@ -1,4 +1,4 @@
-<dom-module name="telemetry-graph">
+<dom-module name="orov-telemetry-graph">
 <style>
 </style>
   <template>
@@ -12,9 +12,8 @@
   </template>
   <script>
     (function() {
-
       Polymer({
-        is:'telemetry-graph',
+        is:'orov-telemetry-graph',
         properties:{
           telemetry: {type:Object},
           seriesToGraph: {type:String},
@@ -25,6 +24,11 @@
             //var result = this.notifyPath('eventEmitter',this.eventEmitter);
             this.eventEmitterHasChanged(null,this.eventEmitter);
           }
+        },
+        attached: function (){
+          this.importHref('../grapp-graph-epoch/grapp-graph-epoch.html', function(e) {
+            console.log("Imported grapp");
+          });
         },
         eventEmitterHasChanged: function(oldvalue,newvalue){
           var self=this;
