Fixing path issues

--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -1,9 +1,9 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
-<link rel="import" href="/ui-plugin/new-ui/time.html" />
-<link rel="import" href="/ui-plugin/new-ui/compass.html" />
-<link rel="import" href="/ui-plugin/new-ui/depth.html" />
-<link rel="import" href="/ui-plugin/new-ui/switches.html" />
-<link rel="import" href="/ui-plugin/new-ui/power.html" />
+<link rel="import" href="time.html" />
+<link rel="import" href="compass.html" />
+<link rel="import" href="depth.html" />
+<link rel="import" href="switches.html" />
+<link rel="import" href="power.html" />
 <link rel="import" href="../../webcomponents/settings/settings.html">
 <link rel="import" href="../../webcomponents/diagnostics/diagnostics.html">
 <link rel="import" href="../../webcomponents/video/video.html">
@@ -11,8 +11,8 @@
 
 <polymer-element name="x-newui">
   <template>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../themes/OpenROV/css/style.css">
     <link rel="stylesheet" href="css/style.css">
     <div id="newuiBody" class="full-height">
       <div id="newuiContainer">
