--- a/src/static/webcomponents/video/video.html
+++ b/src/static/webcomponents/video/video.html
@@ -57,7 +57,8 @@
   <script>
     (function() {
 
-      var socket = window.io.connect();
+      var socket = window.io.connect(window.location.protocol + '//' +
+              window.location.hostname+ ':8080');
       var srcAddress = undefined;
 
       var videoStarted = function() {
