--- a/src/ui-plugins/new-ui/public/switches.html
+++ b/src/ui-plugins/new-ui/public/switches.html
@@ -1,8 +1,8 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <polymer-element name="newui-switches">
   <template>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/themes/OpenROV/css/style.css">
+    <link rel="stylesheet" href="../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../themes/OpenROV/css/style.css">
     <link rel="stylesheet" href="css/style.css">
 
     <style type="text/css">
