--- a/src/ui-plugins/new-ui/public/new-ui.html
+++ b/src/ui-plugins/new-ui/public/new-ui.html
@@ -21,8 +21,8 @@
             <a class="brand" href="#"><img src="../../themes/OpenROV/img/openrov.png" class="logo"><span class="navbar-titel">Cockpit</span></a>
             <div id="menu">
               <rov-menu id="menuitems" class="nav pull-right">
-                <li><a href="/#" id="show-settings" onclick="document.querySelector('html /deep/ rov-settings').open();">Settings</a></li>
-                <li><a href="/#" id="show-diagnostic" onclick="document.querySelector('html /deep/ rov-diagnostics').open();" >Diagnostic</a></li>
+                <li><a href="#" id="show-settings" onclick="document.querySelector('html /deep/ rov-settings').open();">Settings</a></li>
+                <li><a href="#" id="show-diagnostic" onclick="document.querySelector('html /deep/ rov-diagnostics').open();" >Diagnostic</a></li>
               </rov-menu>
             </div>
           </div>
