--- a/src/ui-plugins/new-ui/public/depth.html
+++ b/src/ui-plugins/new-ui/public/depth.html
@@ -8,10 +8,36 @@
       #depthContainer {
         width: 100%;
         margin-bottom: -1.3vw;
+        margin-top: -0.6vw;
       }
       #depth {
-        font-size: 2.1vw;
+        font-size: 1.8vw;
         font-weight: bold;
+      }
+      #depth.inverted {
+        color: black;
+        text-shadow:
+          1px 1px 0 #fff,
+         -1px -1px 0 #fff,  
+          1px -1px 0 #fff,
+         -1px  1px 0 #fff,
+          1px  1px 0 #fff;
+      }
+      #depthTarget {
+        font-size: 1vw;
+        font-weight: bold;
+        padding-top: 2px;
+      }
+      #depthTarget.hidden {
+        opacity: 0;
+      }
+      #depth-unit {
+        text-align: right;
+        position: relative;
+        margin-top: -1vw;
+        padding-top: 5px;
+        margin-bottom: -0.5vw;
+        padding-right: 3px;
       }
       .depth-line-container,
       #depth-change-container {
@@ -41,15 +67,18 @@
       #depthChangeUp { padding-left: 1em }
       #depthChangeDown { padding-right: 1em }
       #depth-change-value { vertical-align: middle; font-size: 1.4em }
-      #depth-change-unit { margin-top: -6px; }
-      .depth-change-indicator { width: 20px; height: 20px }
+      #depth-change-unit { 
+        margin-top: -6px;
+      }
+      .depth-change-indicator { width: 15px; height: 15px }
       svg { width: 100%; }
     </style>
-    <div id="depthContainer">
+    <div id="depthContainer" style="font-family: Sans">
       <div id="depth" class="center text-center">
         {{depth}}
       </div>
-      <div id="depth-unit" class="center text-center unit">m</div>
+      <div id="depthTarget" title="Depthhold target depth" class="center text-center hidden">{{target}}</div>
+      <div id="depth-unit" class="unit">m</div>
       <div class="depth-line-container">
         <span class="depth-line"><hr /></span>
         <span class="depth-line-text">VSI</span>
@@ -75,6 +104,7 @@
     (function() {
       Polymer({
         depth: 0.0,
+        target: 0.0,
         change: "0.0",
         options: {
           indicatorActive: "#ffffff",
@@ -125,9 +155,20 @@
 
           window.cockpit.rov.on('plugin.navigationData.data', function (data) {
             if ('depth' in data) {
-              currentDepth = data.depth;
+              currentDepth = Number(data.depth).toFixed(1);
             }
           });
+          
+        window.cockpit.rov.on('plugin.rovpilot.depthHold.target', function(target) {
+          self.target = Number(target).toFixed(1);
+          $(self.$.depth).addClass('inverted');
+          $(self.$.depthTarget).removeClass('hidden');
+        });
+        window.cockpit.rov.on('plugin.rovpilot.depthHold.disabled', function() {
+          self.target = 0;
+          $(self.$.depth).removeClass('inverted');
+          $(self.$.depthTarget).addClass('hidden');
+        });
         }
       });
     })();
