--- a/src/ui-plugins/new-ui/public/compass.html
+++ b/src/ui-plugins/new-ui/public/compass.html
@@ -48,7 +48,7 @@
       </g>
       <text id="heading" fill="{{ options.headingFill }}" stroke="{{ options.bezel }}" stroke-width="{{ options.headingStrokeWidth }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Sans" font-size="250px" letter-spacing="0" line-height="125%" word-spacing="0" y="578.01447" x="460.67117" font-weight="bold">{{heading}}</text>
 
-      <text id="target" fill="{{ options.bezel }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Sans" font-size="150px" letter-spacing="0" line-height="100%" word-spacing="0" y="720" x="460.67117" font-weight="bold">{{target}}</text>
+      <text id="target" fill="{{ options.bezel }}" style="letter-spacing:0;text-anchor:middle;word-spacing:0;text-align:center;" font-family="Sans" font-size="150px" letter-spacing="0" line-height="100%" word-spacing="0" y="720" x="460.67117" font-weight="bold" title="Heading hold target">{{target}}</text>
 
       <g
        id="indicator">
